# weixin-windows-mcp

./: .gitignore  README.md  config.json  main.py  pyproject.toml  requirements.txt  wechat_mcp.py  wx_client.py
examples/: main.py  x.py
src/wechat_pc_mcp/: utils.py  wx_client.py
src/weixin_windows_mcp/: factory.py  mac_utils.py  mac_weixin.py  server.py  test.py  utils.py  weixin.py  windows_weixin.py
weixin_windows_mcp/: factory.py  mac_weixin.py  server.py  weixin.py  weixin_base.py  weixin_test.py  windows_weixin.py
