[project]
name = "weixin-windows-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uiautomation>=2.0.25; platform_system == 'Windows'",
    "pywin32>=310; platform_system == 'Windows'",
    "pyobjc; platform_system == 'Darwin'",
    "fastmcp>=2.2.0",
    "arrow>=1.3.0",
]

[project.scripts]
weixin-windows = "weixin_windows_mcp.server:main"
