[project]
name = "weixin-windows-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "fastmcp>=2.2.10",
    "pyobjc>=11.0 ; sys_platform == 'Darwin'",
    "pywin32>=310 ; sys_platform == 'Windows'",
    "uiautomation>=2.0.27 ; sys_platform == 'Windows'",
]

[project.scripts]
weixin-windows = "weixin_windows_mcp.server:main"